# ai-resume-analysis-system

./: .gitignore  AGENTS.md  README.md  THIRD_PARTY_NOTICES.md  docker-compose.yml
.github/workflows/: ci.yml  pages.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: dependencies.py  upload.py
backend/app/api/routes/: health.py  matches.py  resumes.py
backend/app/core/: config.py  error_handlers.py  request_id.py
backend/app/domain/: __init__.py  errors.py  pdf.py
backend/app/schemas/: ai_match.py  ai_profile.py  errors.py  health.py  match.py  resume.py
backend/app/services/: ai_match.py  ai_profile.py  cache.py  jd.py  matching.py  pdf.py  profile.py  redis_cache.py
backend/tests/: test_health.py
backend/tests/fixtures/: README.md
backend/tests/integration/: test_cache_routes.py  test_cors.py  test_error_handlers.py  test_match_validation_errors.py  test_matches.py  test_resumes.py  test_upload_adapter.py
backend/tests/unit/: test_ai_match_client.py  test_ai_profile_client.py  test_cache_service.py  test_config.py  test_jd_service.py  test_match_schemas.py  test_matching_service.py  test_pdf_service.py  test_profile_service.py  test_redis_cache.py  test_resume_schemas.py
docs/: 00-project-checklist.md  01-requirements.md  02-system-design.md  03-api-contract.md  04-engineering-standards.md  05-testing-and-acceptance.md  06-deployment-specification.md  07-local-manual-acceptance.md
docs/superpowers/plans/: 2026-07-10-ai-profile-extraction.md  2026-07-10-pdf-upload-parsing.md  (+2 more)
frontend/: index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
frontend/src/: App.css  App.test.tsx  App.tsx  index.css  main.tsx
scripts/: generate_pdf_fixtures.py  validate_infrastructure.py
tests/: test_infrastructure.py
(+24 files in other folders)
