[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "xingshi-resume-api"
version = "0.1.0"
description = "FastAPI backend for the Xingshi resume analysis system"
requires-python = "==3.12.13"
dependencies = [
    "fastapi>=0.115,<1.0",
    "pydantic-settings>=2.7,<3.0",
    "PyMuPDF>=1.25,<2.0",
    "python-multipart>=0.0.20,<1.0",
    "redis>=5.2,<8.0",
    "uvicorn>=0.34,<1.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28,<1.0",
    "mypy>=1.14,<2.0",
    "pip-tools>=7.4,<8.0",
    "pytest>=8.3,<10.0",
    "pytest-asyncio>=0.25,<2.0",
    "pytest-cov>=6.0,<8.0",
    "pyyaml>=6.0,<7.0",
    "ruff>=0.9,<1.0",
]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
